--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
         <li><a href="https://www.google.com/maps?q=82644高雄市梓官區赤崁北路52號" target="_blank">梓官赤崁清進宮(清水祖師)</a></li>
         <li><a href="https://www.google.com/maps?q=826高雄市梓官區赤崁北路127巷3號" target="_blank">赤崁地基主</a></li>
         <li><a href="https://www.google.com/maps?q=826高雄市梓官區赤崁北路276號" target="_blank">連全興國際有限公司</a></li>
-        <li><a href="https://maps.app.goo.gl/5RdqzKAX5CVdnrJn6?g_st=com.google.maps.preview.copy" target="_blank">肉鬆工廠新庄路1-23號</a></li>
-        <li><a href="https://www.google.com/maps?q=827高雄市彌陀區新庄路9號" target="_blank">無名麵店對面的工廠</a></li>
+        <li><a href="https://maps.app.goo.gl/4P3SVkgNLaYfnUPZ7" target="_blank">肉鬆工廠(新庄路1-23號)</a></li>
+        <li><a href="https://www.google.com/maps?q=827高雄市彌陀區新庄路9號" target="_blank">新庄麵店的對面工廠</a></li>
     </ul>
 </body>
 </html>
