--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>高成鮮花店專業送花</title>
     <style>
-        /* 設定頁面整體背景 */
         body {
             font-family: 'Arial', sans-serif;
             background: linear-gradient(135deg, #f8b6d9, #ffddf0);
@@ -20,15 +19,13 @@
             text-align: center;
         }
 
-        /* 設定標題樣式 */
         h1 {
             font-size: 3em;
-            color: #4f4f4f;
+            color: #333; /* 調深標題顏色 */
             margin-bottom: 30px;
             text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
         }
 
-        /* 設定連結樣式 */
         ul {
             list-style-type: none;
             padding: 0;
@@ -36,36 +33,33 @@
 
         li {
             margin: 15px 0;
-        }
-
-        a {
-            font-size: 1.2em;
-            color: #ff4b7a;
-            text-decoration: none;
-            padding: 10px 20px;
-            border-radius: 5px;
-            transition: background-color 0.3s, transform 0.3s;
-        }
-
-        a:hover {
-            background-color: #ff8fb0;
-            transform: translateY(-5px);
-        }
-
-        /* 加入卡片效果 */
-        li {
             display: inline-block;
             background: rgba(255, 255, 255, 0.8);
             border-radius: 10px;
-            padding: 10px 20px;
+            padding: 10px;
             box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-            transition: box-shadow 0.3s;
+            transition: box-shadow 0.3s, transform 0.3s;
+            max-width: 300px; /* 限制最大寬度 */
         }
 
         li:hover {
             box-shadow: 0 8px 20px rgba(0, 0, 0, 0.2);
+            transform: scale(1.05);
         }
 
+        a {
+            display: block; /* 讓整個 li 都可點擊 */
+            font-size: 1.2em;
+            color: #ff4b7a;
+            text-decoration: none;
+            padding: 15px 20px;
+            border-radius: 5px;
+            transition: background-color 0.3s;
+        }
+
+        a:hover {
+            background-color: #ff8fb0;
+        }
     </style>
 </head>
 <body>
@@ -74,7 +68,7 @@
         <li><a href="https://www.google.com/maps?q=82644高雄市梓官區赤崁北路52號" target="_blank">梓官赤崁清進宮(清水祖師)</a></li>
         <li><a href="https://www.google.com/maps?q=826高雄市梓官區赤崁北路127巷3號" target="_blank">赤崁地基主</a></li>
         <li><a href="https://www.google.com/maps?q=826高雄市梓官區赤崁北路276號" target="_blank">連全興國際有限公司</a></li>
-        <li><a href="https://maps.app.goo.gl/4P3SVkgNLaYfnUPZ7" target="_blank">肉鬆工廠(新庄路1-23號)</a></li>
+        <li><a href="https://www.google.com/maps?q=826高雄市梓官區新庄路1-23號" target="_blank">肉鬆工廠(新庄路1-23號)</a></li>
         <li><a href="https://www.google.com/maps?q=827高雄市彌陀區新庄路9號" target="_blank">新庄麵店的對面工廠</a></li>
     </ul>
 </body>
