--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
 
         li {
             margin: 15px 0;
+            font-size: 1.2em;
         }
 
         a {
-            font-size: 1.2em;
             color: #ff4b7a;
             text-decoration: none;
             padding: 10px 20px;
@@ -67,7 +67,6 @@
             margin-top: 40px;
             color: #4f4f4f;
         }
-
     </style>
 </head>
 <body>
@@ -77,9 +76,12 @@
     <div class="region">
         <h2 class="region-title">赤崁北路</h2>
         <ul>
-            <li><a href="https://www.google.com/maps?q=82644高雄市梓官區赤崁北路52號" target="_blank">梓官赤崁清進宮(清水祖師)</a></li>
-            <li><a href="https://www.google.com/maps?q=826高雄市梓官區赤崁北路127巷3號" target="_blank">赤崁地基主</a></li>
-            <li><a href="https://www.google.com/maps?q=826高雄市梓官區赤崁北路276號" target="_blank">連全興國際有限公司</a></li>
+            <li><a href="https://www.google.com/maps?q=82644高雄市梓官區赤崁北路52號" target="_blank">1. 梓官赤崁清進宮(清水祖師)</a></li>
+            <li><a href="https://www.google.com/maps?q=826高雄市梓官區赤崁北路127巷3號" target="_blank">2. 赤崁地基主</a></li>
+            <li><a href="https://www.google.com/maps?q=826高雄市梓官區赤崁北路276號" target="_blank">3. 連全興國際有限公司</a></li>
+            <li><a href="https://maps.app.goo.gl/4P3SVkgNLaYfnUPZ7" target="_blank">4. 肉鬆工廠(新庄路1-23號)</a></li>
+            <li><a href="https://www.google.com/maps?q=827高雄市彌陀區新庄路9號" target="_blank"5. 新庄麵店的對面工廠</a></li>
+        </ul>
         </ul>
     </div>
 
@@ -87,7 +89,8 @@
     <div class="region">
         <h2 class="region-title">赤崁東路</h2>
         <ul>
-            <!-- 這裡可以添加赤崁東路相關的連結 -->
+            <li><a href="https://www.google.com/maps?q=826高雄市梓官區赤崁東路123號" target="_blank">1. 某某商店</a></li>
+            <li><a href="https://www.google.com/maps?q=826高雄市梓官區赤崁東路456號" target="_blank">2. 赤崁東路小吃店</a></li>
         </ul>
     </div>
 
@@ -95,7 +98,7 @@
     <div class="region">
         <h2 class="region-title">赤崁南路</h2>
         <ul>
-            <!-- 這裡可以添加赤崁南路相關的連結 -->
+            <li><a href="https://www.google.com/maps?q=826高雄市梓官區赤崁南路789號" target="_blank">1. 南路餐廳</a></li>
         </ul>
     </div>
 
@@ -103,7 +106,7 @@
     <div class="region">
         <h2 class="region-title">赤崁西路</h2>
         <ul>
-            <!-- 這裡可以添加赤崁西路相關的連結 -->
+            <li><a href="https://www.google.com/maps?q=826高雄市梓官區赤崁西路101號" target="_blank">1. 赤崁西路店鋪</a></li>
         </ul>
     </div>
 
@@ -111,7 +114,7 @@
     <div class="region">
         <h2 class="region-title">嘉展路</h2>
         <ul>
-            <!-- 這裡可以添加嘉展路相關的連結 -->
+            <li><a href="https://www.google.com/maps?q=826高雄市梓官區嘉展路202號" target="_blank">1. 嘉展路商店</a></li>
         </ul>
     </div>
 
@@ -119,8 +122,7 @@
     <div class="region">
         <h2 class="region-title">中正路</h2>
         <ul>
-            <li><a href="https://maps.app.goo.gl/4P3SVkgNLaYfnUPZ7" target="_blank">肉鬆工廠(新庄路1-23號)</a></li>
-            <li><a href="https://www.google.com/maps?q=827高雄市彌陀區新庄路9號" target="_blank">新庄麵店的對面工廠</a></li>
+            <li><a href="https://www.google.com/maps?q=826高雄市梓官區嘉展路202號" target="_blank">1. 嘉展路商店</a></li>
         </ul>
     </div>
 
