--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
             display: flex;
             flex-direction: column;
             align-items: center;
-            justify-content: center;
-            height: 100vh;
+            justify-content: flex-start;  /* 調整為 'flex-start' 以便從頂部開始 */
+            min-height: 100vh;  /* 改為 min-height 而非 height */
             text-align: center;
         }
 
@@ -80,8 +80,7 @@
             <li><a href="https://www.google.com/maps?q=826高雄市梓官區赤崁北路127巷3號" target="_blank">2. 赤崁地基主</a></li>
             <li><a href="https://www.google.com/maps?q=826高雄市梓官區赤崁北路276號" target="_blank">3. 連全興國際有限公司</a></li>
             <li><a href="https://maps.app.goo.gl/4P3SVkgNLaYfnUPZ7" target="_blank">4. 肉鬆工廠(新庄路1-23號)</a></li>
-            <li><a href="https://www.google.com/maps?q=827高雄市彌陀區新庄路9號" target="_blank"5. 新庄麵店的對面工廠</a></li>
-        </ul>
+            <li><a href="https://www.google.com/maps?q=827高雄市彌陀區新庄路9號" target="_blank">5. 新庄麵店的對面工廠</a></li>
         </ul>
     </div>
 
