--- a/index.html
+++ b/index.html
@@ -5,27 +5,57 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>高成鮮花店專業送花</title>
     <style>
+        /* 設定整體頁面 */
         body {
-            font-family: 'Arial', sans-serif;
-            background: linear-gradient(135deg, #f8b6d9, #ffddf0);
-            color: #333;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            background-color: #f4f4f9;
             margin: 0;
             padding: 0;
             display: flex;
             flex-direction: column;
             align-items: center;
-            justify-content: flex-start;  /* 調整為 'flex-start' 以便從頂部開始 */
-            min-height: 100vh;  /* 改為 min-height 而非 height */
+            justify-content: flex-start;
+            min-height: 100vh;
+            color: #333;
             text-align: center;
         }
 
+        /* 頁面標題 */
         h1 {
-            font-size: 3em;
-            color: #4f4f4f;
-            margin-bottom: 30px;
-            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
+            font-size: 2.8em;
+            color: #333;
+            margin: 40px 0;
+            font-weight: 600;
+            letter-spacing: 2px;
         }
 
+        /* 區域標題 */
+        .region-title {
+            font-size: 1.8em;
+            margin-top: 20px;
+            color: #5a5a5a;
+            font-weight: 500;
+            letter-spacing: 1px;
+        }
+
+        /* 卡片式區塊 */
+        .region {
+            width: 80%;
+            max-width: 1200px;
+            margin: 20px 0;
+            padding: 30px;
+            background: #fff;
+            border-radius: 12px;
+            box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
+            transition: box-shadow 0.3s ease;
+        }
+
+        /* 滑鼠懸停時卡片陰影效果 */
+        .region:hover {
+            box-shadow: 0 15px 30px rgba(0, 0, 0, 0.15);
+        }
+
+        /* 列表 */
         ul {
             list-style-type: none;
             padding: 0;
@@ -33,40 +63,43 @@
 
         li {
             margin: 15px 0;
-            font-size: 1.2em;
         }
 
+        /* 連結設計 */
         a {
-            color: #ff4b7a;
+            font-size: 1.1em;
+            color: #ff5c8d;
             text-decoration: none;
-            padding: 10px 20px;
-            border-radius: 5px;
-            transition: background-color 0.3s, transform 0.3s;
+            padding: 12px 24px;
+            border-radius: 6px;
+            background-color: #fff;
+            border: 2px solid #ff5c8d;
+            transition: all 0.3s ease;
         }
 
+        /* 滑鼠懸停時的效果 */
         a:hover {
-            background-color: #ff8fb0;
-            transform: translateY(-5px);
+            background-color: #ff5c8d;
+            color: #fff;
+            transform: translateY(-3px);
         }
 
-        li {
-            display: inline-block;
-            background: rgba(255, 255, 255, 0.8);
-            border-radius: 10px;
-            padding: 10px 20px;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-            transition: box-shadow 0.3s;
+        /* 響應式設計 - 優化手機端顯示 */
+        @media (max-width: 768px) {
+            h1 {
+                font-size: 2.2em;
+            }
+
+            .region-title {
+                font-size: 1.5em;
+            }
+
+            .region {
+                width: 90%;
+                padding: 20px;
+            }
         }
 
-        li:hover {
-            box-shadow: 0 8px 20px rgba(0, 0, 0, 0.2);
-        }
-
-        .region-title {
-            font-size: 2em;
-            margin-top: 40px;
-            color: #4f4f4f;
-        }
     </style>
 </head>
 <body>
