--- a/index.html
+++ b/index.html
@@ -125,8 +125,23 @@
     <div class="region">
         <h2 class="region-title">赤崁東路</h2>
         <ul>
-            <li><a href="https://www.google.com/maps?q=826高雄市梓官區赤崁東路123號" target="_blank">1. 某某商店</a></li>
-            <li><a href="https://www.google.com/maps?q=826高雄市梓官區赤崁東路456號" target="_blank">2. 赤崁東路小吃店</a></li>
+
+    <li><a href="https://maps.app.goo.gl/vXb21gJpDGwJgvYq8?g_st=com.google.maps.preview.copy" target="_blank">1. 赤崁淨華寺 </a></ li>
+
+            <li><a href="https://maps.app.goo.gl/pRiZ5wpuz5qZGdb77?g_st=com.google.maps.preview.copy" target="_blank">2. 赤崁齊天大聖</a></ li>
+
+
+            <li><a href="https://maps.app.goo.gl/Qu97WsAo7iZM3Q3r7?g_st=com.google.maps.preview.copy" target="_blank">2. 赤崁聖龍殿五府千歲</a></ li>
+
+            <li><a href="https://maps.app.goo.gl/Ficqvj3tVQkMPfQQ7?g_st=com.google.maps.preview.copy" target="_blank">2. 赤崁慈皇宮 </a></ li>
+
+            <li><a href="https://maps.app.goo.gl/KGnwiBpFY1PYZdEr5?g_st=com.google.maps.preview.copy" target="_blank">2. 赤崁廣山寺 </a></ li>
+
+            <li><a href="https://maps.app.goo.gl/gg842HsATdtncoQk9?g_st=com.google.maps.preview.copy" target="_blank">2. 赤崁順天壇 </a></ li>
+
+
+            <li><a href="https://maps.app.goo.gl/fECy54HL8ffEhZMn8?g_st=com.google.maps.preview.copy" target="_blank">3. 赤崁元聖宮 </a></li>
+
         </ul>
     </div>
 
