--- a/index.html
+++ b/index.html
@@ -126,21 +126,21 @@
         <h2 class="region-title">赤崁東路</h2>
         <ul>
 
-    <li><a href="https://maps.app.goo.gl/vXb21gJpDGwJgvYq8?g_st=com.google.maps.preview.copy" target="_blank">1. 赤崁淨華寺 </a></ li>
+    <li><a href="https://maps.app.goo.gl/vXb21gJpDGwJgvYq8?g_st=com.google.maps.preview.copy" target="_blank">1. 赤崁淨華寺 赤崁東路55號 </a></ li>
 
-            <li><a href="https://maps.app.goo.gl/pRiZ5wpuz5qZGdb77?g_st=com.google.maps.preview.copy" target="_blank">2. 赤崁齊天大聖</a></ li>
-
-
-            <li><a href="https://maps.app.goo.gl/Qu97WsAo7iZM3Q3r7?g_st=com.google.maps.preview.copy" target="_blank">2. 赤崁聖龍殿五府千歲</a></ li>
-
-            <li><a href="https://maps.app.goo.gl/Ficqvj3tVQkMPfQQ7?g_st=com.google.maps.preview.copy" target="_blank">2. 赤崁慈皇宮 </a></ li>
-
-            <li><a href="https://maps.app.goo.gl/KGnwiBpFY1PYZdEr5?g_st=com.google.maps.preview.copy" target="_blank">2. 赤崁廣山寺 </a></ li>
-
-            <li><a href="https://maps.app.goo.gl/gg842HsATdtncoQk9?g_st=com.google.maps.preview.copy" target="_blank">2. 赤崁順天壇 </a></ li>
+            <li><a href="https://maps.app.goo.gl/pRiZ5wpuz5qZGdb77?g_st=com.google.maps.preview.copy" target="_blank">2. 赤崁齊天大聖 赤崁東路139巷</a></ li>
 
 
-            <li><a href="https://maps.app.goo.gl/fECy54HL8ffEhZMn8?g_st=com.google.maps.preview.copy" target="_blank">3. 赤崁元聖宮 </a></li>
+            <li><a href="https://maps.app.goo.gl/Qu97WsAo7iZM3Q3r7?g_st=com.google.maps.preview.copy" target="_blank">3. 赤崁聖龍殿五府千歲 赤崁東路90巷71號</a></ li>
+
+            <li><a href="https://maps.app.goo.gl/Ficqvj3tVQkMPfQQ7?g_st=com.google.maps.preview.copy" target="_blank">4. 赤崁慈皇宮 赤崁東路235巷82-3號</a></ li>
+
+            <li><a href="https://maps.app.goo.gl/KGnwiBpFY1PYZdEr5?g_st=com.google.maps.preview.copy" target="_blank">5. 赤崁廣山寺  赤崁東路118號</a></ li>
+
+            <li><a href="https://maps.app.goo.gl/gg842HsATdtncoQk9?g_st=com.google.maps.preview.copy" target="_blank">6. 赤崁順天壇 赤崁東路173巷28號</a></ li>
+
+
+            <li><a href="https://maps.app.goo.gl/fECy54HL8ffEhZMn8?g_st=com.google.maps.preview.copy" target="_blank">7. 赤崁元聖宮 赤崁東路130巷33-1號</a></li>
 
         </ul>
     </div>
@@ -160,6 +160,37 @@
             <li><a href="https://www.google.com/maps?q=826高雄市梓官區赤崁西路101號" target="_blank">1. 赤崁西路店鋪</a></li>
         </ul>
     </div>
+
+
+    <!-- 光明路區域 -->
+    <div class="region">
+        <h2 class="region-title">光明路</h2>
+        <ul>
+
+           <li><a href="https://maps.app.goo.gl/4LPjmBMixY8veGSZ8" target="_blank">1. 梓官蚵仔寮觀海府  光明路147巷92號</a></li>
+
+          <li><a href="https://maps.app.goo.gl/4LPjmBMixY8veGSZ8" target="_blank">1. 蚵子寮海南宮包公  共和路66號</a></li>
+
+          <li><a href="https://maps.app.goo.gl/pHSUjVdSCCm3zPZP6">1. 竹圍仔內北極黃王  共和路47號</a></li>
+
+          <li><a href="https://maps.app.goo.gl/k3fsgJ5xZrMwqYck9" target="_blank">1. 蚵子寮天壇宮  共和路1號</a></li>
+
+        <li><a href="https://maps.app.goo.gl/Hx5FGP2VxxZJBaBc6" target="_blank">1. 蚵子寮竹圍仔內民安宮  通安路260巷10之1號</a></li>
+
+        <li><a href="https://maps.app.goo.gl/PDSTpQ31d3PXSn1t9" target="_blank">1. 蚵子寮七房龍聖宮 通安路236巷8號</a></li>
+
+          <li><a href="https://maps.app.goo.gl/555n65XUJ15ahxdm8" target="_blank">1. 蚵子寮土葛厝龍安堂 通安路305巷3號</a></li>
+
+          <li><a href="https://maps.app.goo.gl/cYnbMPtu7CJAHxXz5" target="_blank">1. 蚵子寮通安宮 通安路305巷30號</a></li>
+
+
+
+            <li><a href="https://maps.app.goo.gl/3ER1tsdgRFqjJMwg7" target="_blank">1. 新廣吉禮餅舖 光明路6號</a></li>
+        </ul>
+    </div>
+
+
+
 
     <!-- 嘉展路區域 -->
     <div class="region">
