--- a/index.html
+++ b/index.html
@@ -192,19 +192,29 @@
 
 
 
-    <!-- 嘉展路區域 -->
+    <!-- 大舍東路區域 -->
     <div class="region">
-        <h2 class="region-title">嘉展路</h2>
+        <h2 class="region-title">大舍東路</h2>
         <ul>
-            <li><a href="https://www.google.com/maps?q=826高雄市梓官區嘉展路202號" target="_blank">1. 嘉展路商店</a></li>
+            <li><a href="https://maps.app.goo.gl/Qm5bFfUSSvR1xJ4V9?g_st=com.google.maps.preview.copy" target="_blank">1. 台灣彩券-發大財彩劵行  {大舍東路16號} </a></li>
+
+            <li><a href="https://maps.app.goo.gl/nvZq4R8h1ETbSLne7?g_st=com.google.maps.preview.copy" target="_blank">1. 大舍甲大壽宮{大舍東路公厝巷4號} </a></li>
+
         </ul>
     </div>
 
-    <!-- 中正路區域 -->
+    <!-- 嘉展路區域 -->
     <div class="region">
-        <h2 class="region-title">中正路</h2>
+        <h2 class="region-title"> 嘉展路 </h2>
         <ul>
-            <li><a href="https://www.google.com/maps?q=826高雄市梓官區嘉展路202號" target="_blank">1. 嘉展路商店</a></li>
+            <li><a href="https://maps.app.goo.gl/zPRhdZQcwgzSKRV3A?g_st=com.google.maps.preview.copy" target="_blank">1. 興隆汽車 {嘉展路39號} </a></li>
+
+<li><a href="https://maps.app.goo.gl/txAQDRXfgMGcM2zE7?g_st=com.google.maps.preview.copy" target="_blank">1. ｛嘉展路42號｝</a></li>
+
+<li><a href="https://maps.app.goo.gl/VJDAMvR33H1ZjZrG8?g_st=com.google.maps.preview.copy" target="_blank">1. 武聖宮｛嘉展路206巷74號｝ </a></
+
+<li><a href="https://maps.app.goo.gl/tE9MHDAKxefjVxNE6?g_st=com.google.maps.preview.copy" target="_blank">1. 聖安宮｛大舍南路403巷｝ </a></
+
         </ul>
     </div>
 
