--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 
     <li><a href="https://maps.app.goo.gl/vXb21gJpDGwJgvYq8?g_st=com.google.maps.preview.copy" target="_blank">1. 赤崁淨華寺 {赤崁東路55號} </a></ li>
 
-            <li><a href="https://maps.app.goo.gl/pRiZ5wpuz5qZGdb77?g_st=com.google.maps.preview.copy" target="_blank">2. 赤崁齊天大聖 {赤崁東路139巷}</a></ li>
+            <li><a href="https://maps.app.goo.gl/pRiZ5wpuz5qZGdb77?g_st=com.google.maps.preview.copy" target="_blank">2. 赤崁齊天大聖大聖壇 {赤崁東路139巷}</a></ li>
 
 
             <li><a href="https://maps.app.goo.gl/Qu97WsAo7iZM3Q3r7?g_st=com.google.maps.preview.copy" target="_blank">3. 赤崁聖龍殿五府千歲 {赤崁東路90巷71號}</a></ li>
@@ -169,23 +169,23 @@
 
            <li><a href="https://maps.app.goo.gl/4LPjmBMixY8veGSZ8" target="_blank">1. 梓官蚵仔寮觀海府  {光明路147巷92號}</a></li>
 
-          <li><a href="https://maps.app.goo.gl/4LPjmBMixY8veGSZ8" target="_blank">1. 蚵子寮海南宮包公  {共和路66號}</a></li>
+          <li><a href="https://maps.app.goo.gl/4LPjmBMixY8veGSZ8" target="_blank">2. 蚵子寮海南宮包公  {共和路66號}</a></li>
 
-          <li><a href="https://maps.app.goo.gl/pHSUjVdSCCm3zPZP6">1. 竹圍仔內北極黃王  {共和路47號}</a></li>
+          <li><a href="https://maps.app.goo.gl/pHSUjVdSCCm3zPZP6">3. 竹圍仔內北極黃王  {共和路47號}</a></li>
 
-          <li><a href="https://maps.app.goo.gl/k3fsgJ5xZrMwqYck9" target="_blank">1. 蚵子寮天壇宮  {共和路1號}</a></li>
+          <li><a href="https://maps.app.goo.gl/k3fsgJ5xZrMwqYck9" target="_blank">4. 蚵子寮天壇宮  {共和路1號}</a></li>
 
-        <li><a href="https://maps.app.goo.gl/Hx5FGP2VxxZJBaBc6" target="_blank">1. 蚵子寮竹圍仔內民安宮  {通安路260巷10之1號}</a></li>
+        <li><a href="https://maps.app.goo.gl/Hx5FGP2VxxZJBaBc6" target="_blank">5. 蚵子寮竹圍仔內民安宮  {通安路260巷10之1號}</a></li>
 
-        <li><a href="https://maps.app.goo.gl/PDSTpQ31d3PXSn1t9" target="_blank">1. 蚵子寮七房龍聖宮 {通安路236巷8號}</a></li>
+        <li><a href="https://maps.app.goo.gl/PDSTpQ31d3PXSn1t9" target="_blank">6. 蚵子寮七房龍聖宮 {通安路236巷8號}</a></li>
 
-          <li><a href="https://maps.app.goo.gl/555n65XUJ15ahxdm8" target="_blank">1. 蚵子寮土葛厝龍安堂 {通安路305巷3號}</a></li>
+          <li><a href="https://maps.app.goo.gl/555n65XUJ15ahxdm8" target="_blank">7. 蚵子寮土葛厝龍安堂 {通安路305巷3號}</a></li>
 
-          <li><a href="https://maps.app.goo.gl/cYnbMPtu7CJAHxXz5" target="_blank">1. 蚵子寮通安宮 {通安路305巷30號}</a></li>
+          <li><a href="https://maps.app.goo.gl/cYnbMPtu7CJAHxXz5" target="_blank">8. 蚵子寮通安宮 {通安路305巷30號}</a></li>
 
 
 
-            <li><a href="https://maps.app.goo.gl/3ER1tsdgRFqjJMwg7" target="_blank">1. 新廣吉禮餅舖 {光明路6號}</a></li>
+            <li><a href="https://maps.app.goo.gl/3ER1tsdgRFqjJMwg7" target="_blank">9. 新廣吉禮餅舖 {光明路6號}</a></li>
         </ul>
     </div>
 
@@ -198,7 +198,7 @@
         <ul>
             <li><a href="https://maps.app.goo.gl/Qm5bFfUSSvR1xJ4V9?g_st=com.google.maps.preview.copy" target="_blank">1. 台灣彩券-發大財彩劵行  {大舍東路16號} </a></li>
 
-            <li><a href="https://maps.app.goo.gl/nvZq4R8h1ETbSLne7?g_st=com.google.maps.preview.copy" target="_blank">1. 大舍甲大壽宮{大舍東路公厝巷4號} </a></li>
+            <li><a href="https://maps.app.goo.gl/nvZq4R8h1ETbSLne7?g_st=com.google.maps.preview.copy" target="_blank">2. 大舍甲大壽宮{大舍東路公厝巷4號} </a></li>
 
         </ul>
     </div>
@@ -209,11 +209,11 @@
         <ul>
             <li><a href="https://maps.app.goo.gl/zPRhdZQcwgzSKRV3A?g_st=com.google.maps.preview.copy" target="_blank">1. 興隆汽車 {嘉展路39號} </a></li>
 
-<li><a href="https://maps.app.goo.gl/txAQDRXfgMGcM2zE7?g_st=com.google.maps.preview.copy" target="_blank">1. ｛嘉展路42號｝</a></li>
+<li><a href="https://maps.app.goo.gl/txAQDRXfgMGcM2zE7?g_st=com.google.maps.preview.copy" target="_blank">2. 興隆汽車對面民宅（如果沒人回應，可將花束放門旁邊橘桶 ｛嘉展路42號｝</a></li>
 
-<li><a href="https://maps.app.goo.gl/VJDAMvR33H1ZjZrG8?g_st=com.google.maps.preview.copy" target="_blank">1. 武聖宮｛嘉展路206巷74號｝ </a></
+<li><a href="https://maps.app.goo.gl/VJDAMvR33H1ZjZrG8?g_st=com.google.maps.preview.copy" target="_blank">3. 武聖宮｛嘉展路206巷74號｝ </a></
 
-<li><a href="https://maps.app.goo.gl/tE9MHDAKxefjVxNE6?g_st=com.google.maps.preview.copy" target="_blank">1. 聖安宮｛大舍南路403巷｝ </a></
+<li><a href="https://maps.app.goo.gl/tE9MHDAKxefjVxNE6?g_st=com.google.maps.preview.copy" target="_blank">4. 聖安宮｛大舍南路403巷｝ </a></
 
         </ul>
     </div>
