--- a/index.html
+++ b/index.html
@@ -186,6 +186,8 @@
 
 
             <li><a href="https://maps.app.goo.gl/3ER1tsdgRFqjJMwg7" target="_blank">9. 新廣吉禮餅舖 {光明路6號}</a></li>
+
+             <li><a href="https://maps.app.goo.gl/yRPnicTMuzMrrjcK6?g_st=com.google.maps.preview.copy" target="_blank">9. 蚵仔寮代天府清水殿 {通港路116號}</a></li>
         </ul>
     </div>
 
